added responsible css

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
             <button class="btn shape-div circles">Circles</button>
             <button class="btn shape-div squares">Squares</button>
-            <button class="btn shape-div stars">Stars</button>
+            <!-- <button class="btn shape-div stars">Stars</button> -->
         </div>
 
     </div>
@@ -47,7 +47,7 @@
         <button class="btn btn-close">Close</button>
         <h1>It's time to draw some Lines!</h1>
         <button class="btn shape-div straight-lines">Straight Lines</button>
-        <button class="btn shape-div curves">Curves</button>
+        <!-- <button class="btn shape-div curves">Curves</button> -->
     </div>
 
 <!-- shapes submenus -->
